@@ -128,6 +128,8 @@ public abstract class AS2Visitor {
 
 	protected abstract void visit(final ActionPop instruction);
 
+	protected abstract void visit(final ActionPreviousFrame instruction);
+
 	protected abstract void visit(final ActionPush instruction);
 
 	protected abstract void visit(final ActionPushDuplicate instruction);
@@ -383,6 +385,9 @@ public abstract class AS2Visitor {
 		}
 		else if (instruction instanceof ActionPop) {
 			visit((ActionPop) instruction);
+		}
+		else if (instruction instanceof ActionPreviousFrame) {
+			visit((ActionPreviousFrame) instruction);
 		}
 		else if (instruction instanceof ActionPush) {
 			visit((ActionPush) instruction);
